// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilter renders CheckboxAggregation if range prop is not set 1`] = `
<CheckboxAggregation
  buckets={
    Immutable.List [
      Immutable.Map {
        key: "bucket1",
        doc_count: 1,
      },
      Immutable.Map {
        key: "bucket2",
        doc_count: 2,
      },
    ]
  }
  name="Test"
  onChange={[Function]}
  selections={
    Array [
      "bucket1",
    ]
  }
/>
`;

exports[`AggregationFilter renders RangeAggregation if range prop is true 1`] = `
<RangeAggregation
  buckets={
    Immutable.List [
      Immutable.Map {
        key: "bucket1",
        doc_count: 1,
      },
      Immutable.Map {
        key: "bucket2",
        doc_count: 2,
      },
    ]
  }
  countPropName="doc_count"
  deselectedColor="#fff"
  height={100}
  hoverColor="#69c0ff"
  keyPropName="key_as_string"
  name="Test"
  onChange={[Function]}
  selectedColor="#91d5ff"
  selections={
    Array [
      "bucket1",
    ]
  }
  width={200}
/>
`;
